Correct widget button text spacing
- Fixed, widget button icon and text not being spaced between each
other.

--- a/src/MvcTemplate.Web/Content/Shared/widget-box.css
+++ b/src/MvcTemplate.Web/Content/Shared/widget-box.css
@@ -43,7 +43,7 @@
   color: #ffffff;
 }
 .widget-header .widget-header-buttons .btn > i + .text {
-  padding-right: 5px;
+  padding-left: 5px;
 }
 .widget-content {
   overflow-x: auto;
